# ospack

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.claude-plugin/: marketplace.json
ospack/: __init__.py  chunker.py  cli.py  embedder.py  errors.py  indexer.py  log.py  mapper.py  mcp_server.py  packer.py  resolver.py  trigram.py  watcher.py  workflows.py
ospack/queries/: go.scm  javascript.scm  python.scm  rust.scm  typescript.scm
plugins/ospack/.claude-plugin/: plugin.json
plugins/ospack/commands/: pack.md  search.md
plugins/ospack/skills/ospack/: SKILL.md
src/: index.ts
src/commands/: pack.ts
src/lib/: formatter.ts  import-resolver.ts  packer.ts  semantic-linker.ts
