[project]
name = "ospack"
version = "0.1.0"
description = "Semantic context packer for AI-assisted coding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "sentence-transformers>=2.2",
    "lancedb>=0.4",
    "langchain-text-splitters>=0.3.0",
    "rich>=13.0",
    "pathspec>=0.11",
    "rank-bm25>=0.2",
]

[project.scripts]
ospack = "ospack.cli:main"
ospack-mcp = "ospack.mcp_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = ["black", "ruff", "mypy", "pytest"]
mcp = ["mcp>=1.0"]  # MCP server for AI agent integration

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
