[project]
name = "ospack"
version = "0.2.0"
description = "Semantic context packer for AI-assisted coding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "tiktoken>=0.5",  # Accurate token counting
    "bm25s>=0.2",  # Fast BM25+ search (scipy-based)
    "numba>=0.60",  # ~2x faster retrieval via JIT compilation
    "PyStemmer>=2.0",  # Better recall via word stemming
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-php>=0.23.0",
    "tree-sitter-bash>=0.23.0",
    "tree-sitter-json>=0.24.0",
    "tree-sitter-yaml>=0.7.0",
    "tree-sitter-toml>=0.7.0",
    "tree-sitter-html>=0.23.0",
    "tree-sitter-css>=0.23.0",
    "tree-sitter-markdown>=0.3.0",
    "rich>=13.0",
    "pathspec>=0.11",
]

[project.scripts]
ospack = "ospack.cli:main"
ospack-mcp = "ospack.mcp_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = ["black", "ruff", "mypy", "pytest"]
mcp = ["mcp>=1.0"]  # MCP server for AI agent integration

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
